# actix-web-app

./: .gitignore  Cargo.toml  README.md  run.sh  test  test.rs  thread
docs/: scylla_query.md
lily-middleware/: Cargo.toml
lily-middleware/src/: lib.rs
lily-pg/: Cargo.toml
lily-pg/psql/: init.md
lily-pg/src/: connection.rs  route.rs
lily-pg/src/post/: db.rs  mod.rs  read.rs  schema.rs  update.rs
lily-pg/src/user/: db.rs  login.rs  logout.rs  mod.rs  read.rs  signup.rs  update.rs
lily-scylla/: Cargo.toml
lily-scylla/examples/: test.rs
lily-scylla/src/: error.rs  lib.rs  route.rs
lily-scylla/src/auth/: mod.rs
lily-scylla/src/book/: create.rs  delete.rs  mod.rs  payload.rs  queries.rs  read.rs  update.rs
lily-scylla/src/book/create/: create_and_update.rs  create_and_update_chapter.rs  mod.rs  new_book.rs  new_chapter.rs  new_page.rs  new_section.rs
lily-scylla/src/guides/: blog.cql  book.cql  document.cql  scylladb.md  user.cql
lily-scylla/src/helpers/: error.rs
lily-scylla/src/middleware/: authentication.rs  mod.rs  validation.rs
lily-scylla/src/post/: create.rs  delete.rs  image.rs  mod.rs  read.rs  update.rs
lily-scylla/src/query/: create.rs
lily-scylla/src/service/: encryption.rs  error.rs  mod.rs
lily-scylla/src/user/: delete.rs  login.rs  logout.rs  mod.rs  read.rs  signup.rs  update.rs
lily-scylla/src/utils/: encryption.rs  mod.rs  query.rs  validation.rs
lily-server/: .env  Cargo.toml
lily-server/src/: main.rs
lily-service/: Cargo.toml
lily-service/src/: error.rs  lib.rs
lily-test/: Cargo.toml
lily-test/src/: main.rs
lily-utils/: Cargo.toml
lily-utils/src/: encoder.rs  lib.rs
loony-middleware/: Cargo.toml
loony-middleware/src/: authentication.rs  validation.rs
loony-pg/: Cargo.toml
loony-pg/src/: connection.rs  lib.rs  route.rs
loony-pg/src/post/: create.rs  db.rs  delete.rs  mod.rs  read.rs  update.rs
loony-pg/src/user/: db.rs  login.rs  logout.rs  mod.rs  read.rs  schema.rs  signup.rs  update.rs
loony-scylla/: Cargo.toml
loony-scylla/src/: lib.rs  route.rs
loony-scylla/src/guides/: scylladb.md
loony-scylla/src/user/: create.rs  login.rs  mod.rs  read.rs
loony-server/: Cargo.toml
loony-server/src/: main.rs
loony-service/: Cargo.toml
loony-service/src/: db.rs  error.rs  lib.rs
loony-test/: Cargo.toml
loony-test/examples/: test_uuid.rs
pg-db/: Cargo.toml
pg-db/docs/: postgres_db.md
pg-db/src/: connection.rs  error.rs  lib.rs  query.rs  route.rs
pg-db/src/auth/: login.rs  mod.rs
pg-db/src/blog/: controller.rs  model.rs
pg-db/src/book/: controller.rs  mod.rs  model.rs
pg-db/src/booknode/: read.rs
pg-db/src/user/: mod.rs
scripts/: curl.md  install_scylladb.sh
scylla-db/: Cargo.toml
scylla-db/src/: builder.rs  connections.rs  error.rs  lib.rs  query.rs  route.rs
scylla-db/src/auth/: mod.rs
scylla-db/src/blog/: mod.rs  read.rs
scylla-db/src/book/: titles.rs  user.rs
scylla-db/src/book/read/: readBook.rs  subscribedDocs.rs
scylla-db/src/common/: mod.rs
scylla-db/src/guides/: all.cql  blog.cql  book.cql  userbooksettings.cql
scylla-db/src/middleware/: authentication.rs
scylla-db/src/search/: mod.rs  search.rs
scylla-db/src/user/: category.rs  delete.rs  get.rs  login.rs  mod.rs  signup.rs  users.rs
scylla-db/src/utils/: mod.rs  query.rs
src/: error.rs  main.rs  query.rs  route.rs  search.rs
src/auth/: mod.rs
src/blog/: create.rs  delete.rs  image.rs  mod.rs  read.rs  update.rs
src/blognode/: create.rs  merge.rs  update.rs
src/book/: any.rs  append_node.rs  create.rs  create_update.rs  delete.rs  merge_node.rs  mod.rs  queries.rs  read.rs  safe.delete.rs  titles.rs  update.rs  user.rs
src/book/create/: create_and_update.rs  mod.rs
src/book/read/: mod.rs  readBook.rs  subscribedDocs.rs
src/booknode/: create.rs  merge.rs  update.rs
src/common/: mod.rs
src/guides/: blog.cql  book.cql  categories.cql  scylladb.md  user.cql  user_categories.cql
src/middleware/: authentication.rs
src/node/: create.rs  delete.rs  deleteAndUpdate.rs  merge.rs  mod.rs  update.rs
src/search/: mod.rs  search.rs
src/settings/: mod.rs
src/user/: category.rs  delete.rs  get.rs  login.rs  logout.rs  mod.rs  read.rs  signup.rs  update.rs  users.rs
src/utils/: mod.rs  query.rs
