[package]
name = "lily"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

[workspace]

members = [
	"lily-pg", "lily-scylla", "lily-service", "lily-middleware"
]

[dependencies]
actix-web = "4.0.0-beta.6"
# lily-pg = { path = "./lily-pg"}
lily-scylla = { path = "./lily-scylla"}