[package]
name = "lily"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

[workspace]

members = [
	"lily-service", "lily-middleware", "lily-utils", "lily-test"
]

[dependencies]

#actix
actix-web = "4.0.0-beta.6"
actix-session = { git = "https://github.com/sankar-boro/actix-extras", branch = "sankar", version = "0.5.0-beta.2" }
actix-cors = { git = "https://github.com/sankar-boro/actix-extras", branch = "sankar", version = "0.6.0-beta.2" }
actix-service = "2.0.0"
actix-redis = { git = "https://github.com/sankar-boro/actix-extras", branch = "sankar", version = "0.10.0-beta.2" }
actix-multipart = "0.4.0-beta.4"

#serializer
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
jsonwebtoken = "7"

#db
scylla = "0.3.1"

futures = "0.3.6"
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
anyhow = "1.0.33"
async-std = "1.9.0"
tokio = "1.5.0"
r2d2 = "0.8.9"
validator = { version = "0.12", features = ["derive"] }
derive_more = "0.99.11"
chrono = "0.4.19"
pin-project = "1.0.7"
sanitize-filename = "0.3.0"
rust-argon2 = "0.8.3"
time = "0.2.27"

#logger
env_logger = "0.8"
log = "0.4"

lily-middleware = { path = "./lily-middleware"}
lily-service = { path = "./lily-service"}
lily-utils = { path = "./lily-utils"}