[package]
name = "lily-middleware"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.6"
futures = "0.3.8"
jsonwebtoken = "7"
actix-session = "0.4.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
actix-web-httpauth = "0.5.0"