[package]
name = "lily-pg"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.6"
actix-cors = "0.5.3"
actix-redis = "0.9.1"
actix-session = "0.4.0"
log = "0.4"
env_logger = "0.8.2"
validator = { version = "0.12", features = ["derive"] }
actix-web-httpauth = "0.5.0"
actix-multipart = "0.3.0"
futures = "0.3.13"
sanitize-filename = "0.3.0"
derive_more = "0.99.11"
serde = "1.0.117"
serde_json = "1.0.59"
jsonwebtoken = "7"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"]}
r2d2 = "0.8.9"
dotenv = "0.15.0"
rust-argon2 = "0.8"
redis = { version = "0.17.0", features = ["async-std-comp"] }


lily-middleware = { path = "../lily-middleware"}
lily-service = { path = "../lily-service"}