[package]
name = "lily-scylla"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
actix-session = { git = "https://github.com/sankar-boro/actix-extras", branch = "sankar" }
actix-cors = "0.5.3"
actix-service = "2.0.0"

serde = "1.0.117"
serde_json = "1.0.59"
jsonwebtoken = "7"

scylla = "0.1.0"
futures = "0.3.6"
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
anyhow = "1.0.33"
async-std = "1.9.0"
tokio = "1.5.0"
r2d2 = "0.8.9"
validator = { version = "0.12", features = ["derive"] }
chrono = "0.4.19"
rand = "0.8.3"
pin-project = "1.0.7"

lily-middleware = { path = "../lily-middleware"}
lily-service = { path = "../lily-service"}