[package]
name = "loony-scylla"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
scylla = "0.1.0"
futures = "0.3.6"
uuid = { version = "0.8", features = ["serde", "v4"] }
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
actix-cors = "0.5.3"
anyhow = "1.0.33"
async-std = "1.9.0"
tokio = "1.5.0"
r2d2 = "0.8.9"
validator = { version = "0.12", features = ["derive"] }
serde = "1.0.117"
serde_json = "1.0.59"
loony-middleware = { path = "../loony-middleware"}
loony-service = { path = "../loony-service"}