[package]
name = "loony-server"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "3"
actix-web = "4.0.0-beta.6"
loony-pg = { path = "../loony-pg"}
loony-scylla = { path = "../loony-scylla"}
scylla = "0.1.0"
futures = "0.3.6"
uuid = "0.8.1"
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
actix-cors = "0.5.3"
anyhow = "1.0.33"
async-std = "1.9.0"
tokio = "1.5.0"