[package]
name = "loony-server"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
loony-pg = { path = "../loony-pg"}
loony-scylla = { path = "../loony-scylla"}