[package]
name = "loony-service"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
rust-argon2 = "0.8"
redis = { version = "0.17.0", features = ["async-std-comp"] }
validator = { version = "0.12", features = ["derive"] }
jsonwebtoken = "7"